<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PageKite</string>

    <string name="ticker_text">Flying your kites...</string>
    <string name="notification_title">PageKite</string>
    
    <string name="menu_open">Open URL</string>
    <string name="menu_share">Share URL</string>
    <string name="menu_view_log">View log</string>
    <string name="menu_help">Help</string>
    <string name="menu_signup">Sign up</string>
    <string name="menu_send_log">Send log</string>
    
    <string name="need_account_details">Account details are missing.</string>
    <string name="need_service_ports">No local servers have been configured.</string>
    <string name="need_flying_httpkite">No HTTP kites are flying at the moment.</string>
    
    <string name="status_unknown">Unrecognized status!</string>
    <string name="status_startup">Preparing kites...</string>
    <string name="status_connect">Connecting to frontends...</string>
    <string name="status_dyndns">Updating public DNS records...</string>
    <string name="status_problems">Experiencing some turbulance, will retry.</string>
    <string name="status_rejected">Rejected by front-end: wrong secret or out of quota?</string>
    <string name="status_flying">Kites are flying and all is well.</string>
    <string name="status_no_network">Idle: Waiting for the network.</string>
    <string name="status_frontends">Frontends</string>
    <string name="status_streams">Live clients</string>
    
    <string name="pagekite_pref_enable">Enable PageKite</string>
    <string name="pagekite_stopped">Your kites are ready to fly.</string>
    <string name="pagekite_pref_notification">Show Notification</string>
    <string name="pagekite_summary_notification">Display status icon when active.</string>
    <string name="pagekite_pref_bootstart">Restart on Boot</string>
    <string name="pagekite_summary_bootstart">If kites are flying when the phone is powered off, restart PageKite when the phone is turned on again.</string>
    
    <string name="pagekite_prefs_account">Account Details</string>
    <string name="pagekite_pref_kitename">Kite Name</string>
    <string name="pagekite_summary_kitename">Your kite\'s public DNS name.</string>
    <string name="pagekite_explain_kitename">Usually something.pagekite.me.</string>
    <string name="pagekite_default_kitename">SOMETHING.pagekite.me</string>
    <string name="pagekite_pref_secret">Shared Secret</string>
    <string name="pagekite_summary_secret">Your kite\'s shared secret.</string>
    <string name="pagekite_pref_pagekitenet">Use PageKite.net</string>
    <string name="pagekite_summary_pagekitenet">Uncheck this if you are running your own front-end relay.</string>
    <string name="pagekite_pref_debugging">Enable debugging</string>
    <string name="pagekite_summary_debugging">For developers, makes the app logs far more verbose.</string>
    
    <string name="pagekite_prefs_localhost">Local Server Settings</string>
    <string name="pagekite_info_localhost">(Set ports to 0 to disable)</string>
    <string name="pagekite_pref_httpport">HTTP Port</string>
    <string name="pagekite_summary_httpport">The local port of your HTTP server</string>
    <string name="pagekite_pref_wsport">Websocket Port</string>
    <string name="pagekite_summary_wsport">The local port of your Websocket server</string>
    <string name="pagekite_pref_httpsport">HTTPS Port</string>
    <string name="pagekite_summary_httpsport">The local port of your HTTPS server</string>
    <string name="pagekite_pref_sshport">SSH Port</string>
    <string name="pagekite_summary_sshport">The local port of your SSH server</string>
    <string name="pagekite_pref_wifiip">Use WiFi IP</string>
    <string name="pagekite_summary_wifiip">Connect to the WiFi IP address instead of localhost, for compatibility with some "WiFi-only" servers.</string>
    
</resources>